[gd_scene load_steps=5 format=2]

[ext_resource path="res://IcePlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="IcePlayer" parent="." instance=ExtResource( 1 )]
position = Vector2( 499, 123 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Floor" parent="." instance=ExtResource( 2 )]
position = Vector2( 114, 581 )
tile_data = PoolIntArray( -3, 1, 0, -2, 6, 0, -1, 6, 0, -65536, 536870912, 0, -65535, 536870912, 0, -65534, 0, 0, -65533, 536870912, 0, -65532, 0, 0, -65531, 536870912, 0, -65530, 536870912, 0, -65529, 536870912, 0, -65528, 536870912, 0, -65527, 536870912, 0, -65526, 536870912, 0, -65525, 536870912, 0, -65524, 536870912, 0, -65523, 536870912, 0, -65522, 536870912, 0, -65521, 536870912, 0, -65520, 536870912, 0, -65519, 536870912, 0, -65518, 536870912, 0, -65517, 536870912, 0, -65516, 536870912, 0, -65515, 536870912, 0, -65514, 536870912, 0, -65513, 536870912, 0, -65512, 536870912, 0, -65511, 536870912, 0, -65510, 536870912, 0, -65509, 536870912, 0, -65508, 536870912, 0, -65507, 536870912, 0, -65506, 536870912, 0, -65505, 536870912, 0, -65504, 536870912, 0, -65503, 536870912, 0, -65502, 536870912, 0 )

[node name="FloatingPlatform" parent="." instance=ExtResource( 2 )]
position = Vector2( 757, 513 )
tile_data = PoolIntArray( -1441784, 536870912, 0, -1114101, 536870912, 0, -786422, 536870912, 0, -524280, 536870912, 0, -524279, 536870912, 0, -524278, 536870912, 0, -524277, 536870912, 0, -262138, 536870912, 0, -262137, 536870912, 0, -262136, 536870912, 0, -262135, 536870912, 0, -262134, 536870912, 0, -262133, 536870912, 0, -3, 1, 0, -2, 6, 0, -1, 6, 0, -65536, 0, 0, -65535, 536870912, 0, -65534, 0, 0, -65533, 536870912, 0, -65532, 0, 0, -65531, 536870912, 0, -65530, 536870912, 0 )

[connection signal="jump" from="HUD" to="." method="_on_HUD_jump"]
[connection signal="move_left" from="HUD" to="." method="_on_HUD_move_left"]
[connection signal="move_right" from="HUD" to="." method="_on_HUD_move_right"]
[connection signal="stop_move_left" from="HUD" to="." method="_on_HUD_stop_move_left"]
[connection signal="stop_move_right" from="HUD" to="." method="_on_HUD_stop_move_right"]
